--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "maze-cube-app",
   "version": "0.0.0",
   "description": "Multidimensional maze game",
-  "main": "index.js",
   "dependencies": {
     "react": "~0.12.1",
     "maze-cube": "0.0.1",
@@ -13,7 +12,7 @@
     "material-ui": "~0.3.0"
   },
   "scripts": {
-    "start": "watchify ../maze-cube-app/js/**/*.js -o ../maze-cube-app/js/bundle.js -v -d -s maze",
+    "start": "watchify ../maze-cube-app/static_src/js/components/MazeCubeApp.react.js -o ../maze-cube-app/static/js/compiled.js -v -d",
     "build": "NODE_ENV=production browserify . | uglifyjs -cm > js/bundle.min.js",
     "test": "jest"
   },
@@ -28,12 +27,12 @@
   },
   "devDependencies": {
     "browserify": "~6.3.2",
-    "envify": "~3.2.0",
+    "envify": "^3.4.0",
     "gulp": "^3.8.11",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
     "jest-cli": "~0.1.18",
-    "reactify": "~0.17.1",
+    "reactify": "^1.1.1",
     "uglify": "~0.1.0",
     "uglify-js": "~2.4.15",
     "vinyl-transform": "^1.0.0",
