--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.0",
   "description": "Multidimensional maze game",
   "dependencies": {
-    "react": "~0.12.1",
-    "maze-cube": "0.0.1",
     "flux": "~2.0.1",
-    "object-assign": "~2.0.0",
     "keymirror": "~0.1.0",
     "lodash": "~2.4.1",
-    "material-ui": "~0.3.0"
+    "material-ui": "~0.3.0",
+    "maze-cube": "0.0.1",
+    "object-assign": "~2.0.0",
+    "react": "~0.13.3",
+    "react-three": "^0.6.1",
+    "three": "~0.70.0"
   },
   "scripts": {
     "start": "watchify ../maze-cube-app/static_src/js/components/MazeCubeApp.react.js -o ../maze-cube-app/static/js/compiled.js -v -d",
